pastey-test-suite/tests/ui/unsupported-replace-literal.stderr
error: expected string literal
  --> tests/ui/unsupported-replace-literal.rs:6:37
   |
 6 |             struct [< $name:replace(0, "Zero") >];
   |                                     ^
...
11 | m!(Year2000);
   | ------------ in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
