pastey-test-suite/tests/ui/unsupported-replace-literal.rs
use pastey::paste;

macro_rules! m {
    ($name:ident) => {
        paste! {
            struct [< $name:replace(0, "Zero") >];
        }
    };
}

m!(Year2000);

fn main() {}
